--- a/package.json
+++ b/package.json
@@ -1,12 +1,36 @@
 {
   "name": "cloudinaryapi",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A cloudinary open source alternative API",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/The-Enthusiast-404/Cloudinary.git"
+  },
+  "author": "Sahil Mahapatra",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/The-Enthusiast-404/Cloudinary/issues"
+  },
+  "homepage": "https://github.com/The-Enthusiast-404/Cloudinary#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
+    "nodemon": "^3.0.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
+  }
 }
